WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112860
[wk2] Tiled page overlay layers don't create tiles until the first flush after they switch to being tiled
https://bugs.webkit.org/show_bug.cgi?id=112860
Summary
[wk2] Tiled page overlay layers don't create tiles until the first flush afte...
Tim Horton
Reported
2013-03-20 17:44:00 PDT
1. A page overlay that is created as a tiled layer won't show up until layers are flushed. 2. Resizing a page overlay may flash when it passes the tiling threshold (resize Safari past 2k wide repeatedly with the find overlay up, and you'll see flashes). The visibleRect is not yet set when we do the first flush, so when we swap to a tiled layer, we make no tiles. <
rdar://problem/13468400
>
Attachments
patch
(11.37 KB, patch)
2013-03-20 18:13 PDT
,
Tim Horton
simon.fraser
: review-
webkit-ews
: commit-queue-
Details
Formatted Diff
Diff
better patch!
(3.77 KB, patch)
2013-03-20 18:29 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2013-03-20 18:13:21 PDT
Created
attachment 194158
[details]
patch
Simon Fraser (smfr)
Comment 2
2013-03-20 18:20:46 PDT
Comment on
attachment 194158
[details]
patch Try just calling flushCompositingState()
Early Warning System Bot
Comment 3
2013-03-20 18:20:48 PDT
Comment on
attachment 194158
[details]
patch
Attachment 194158
[details]
did not pass qt-ews (qt): Output:
http://webkit-commit-queue.appspot.com/results/17202560
Tim Horton
Comment 4
2013-03-20 18:29:21 PDT
Created
attachment 194162
[details]
better patch!
Tim Horton
Comment 5
2013-03-21 00:56:33 PDT
http://trac.webkit.org/changeset/146447
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug